--- a/style.css
+++ b/style.css
@@ -9,18 +9,22 @@
 
   h1 {
       margin-bottom:0px;
+      text-align: center;
   }
 
 
   video {
     margin-left: auto;
     margin-right: auto;
-    display: block
+    display: block;
+    margin-top:200px;
 }
 
-.container #header {
-    display:flex;
+div#header.container {
+    width:100vw;
     padding-bottom: 0px;
+    margin:0px !important;
+    max-width:100% !important;
 }
 
 
@@ -35,29 +39,51 @@ hr.bottom-line {
     margin-top: 0px;
     width: 250px;
 }
-html{
+body {
     background-color: linen
 }
 
-@media (max-width:900px) {
-    .nature{
-        transform: scale(.5);
-        display: flex;
-        justify-content: center;
-    }
-      
-    }
+.fixed-nav-bar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    width: 100%;
+    height: 50px;
+    background-color: rgb(235, 230, 230);
+    
+  }
+  
+
+nav ul{
+    white-space: nowrap;
+    max-width: 1200px;
+    margin: 0 auto; 
+}
+
+  nav li{
+      width: 20%;
+      display: inline-block;
+      font-size: 15px;
+  }
+
+  nav li a{
+      text-decoration: none;
+      color: tan
+  }
+
 
     .product{
-        display: flex;
+    display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     text-align: center;
-    width: calc(100% / 3);
+    width: 300px;
     margin: 10px;
     border: 1px solid #000;
     border-radius: 3px;
     background-color: blanchedalmond;
+    font-size: 13px;
     }
 
     .product > .level {
@@ -68,3 +94,122 @@ html{
         text-transform: uppercase;
         font-weight: 700;
         }
+
+    main{
+        max-width: 100%;
+        width: 1200px; 
+        margin: 80px auto; 
+        justify-content: center;
+    }
+
+    form input{
+        margin: 20px 0;
+        padding: 10px 20px;
+        font-size: 15px;
+       
+        border: 4px solid white;
+    }
+
+    footer{
+        padding: 20px;
+        text-align: center;
+        background: white;
+        color:black;
+        font-size: 10px
+    }
+
+   section#pricing {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 115px;
+   }
+
+   div.form
+{
+    display: block;
+    text-align: center;
+}
+form
+{
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+}
+
+.button{
+    text-align: center;
+    
+}
+
+@media (max-width:900px) {
+    .nature{
+        transform: scale(.5);
+        display: flex;
+        justify-content: center;
+        
+    }  
+    }
+
+@media (max-width:300px) {
+    div {
+        width:100% !important
+    }
+    ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media (max-width:750px) {
+    div {
+        width:100% !important
+    }
+    ul {
+        display: flex;
+        flex-direction: column; 
+        position: relative;
+        left: 150px;
+        /* align-items: center; */
+    }
+}
+
+.btn{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: flex-end;
+    background-color:wheat;
+    
+    
+}
+
+div#cleanser.product {
+    justify-content: flex-end
+    
+}
+
+div#left-box.container{
+    position: relative;
+    bottom: 40px;
+}
+    
+
+div.level {
+    position:relative;
+    bottom: 38px;
+}
+
+
+
+div#right-card.level {
+    position: relative;
+    top: 0px;
+}
+
+div#Blush.product {
+    justify-content: initial;
+}
